--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,31 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+
+
+    <!--TextView themes-->
+    <style name="BariolTextViewStyle" parent="Widget.AppCompat.TextView">
+<!--        <item name="android:fontFamily">@font/bariol_regular</item>-->
+<!--        <item name="fontFamily">@font/bariol_regular</item>-->
+    </style>
+
+
+    <!--Button themes-->
+    <style name="Button" parent="Widget.AppCompat.Button.Borderless">
+        <item name="android:paddingStart">28dp</item>
+        <item name="android:paddingEnd">28dp</item>
+        <item name="android:paddingTop">20dp</item>
+        <item name="android:paddingBottom">20dp</item>
+        <item name="android:textSize">19sp</item>
+<!--        <item name="android:fontFamily">@font/bariol_regular</item>-->
+<!--        <item name="fontFamily">@font/bariol_regular</item>-->
+    </style>
+
+    <!--Theme for pink empty app button with border-->
+    <style name="PinkBorderedEmptyButtonStyle" parent="Button">
+        <item name="android:background">@drawable/bg_rounded_45px_pink_empty_bordered</item>
+        <item name="android:textColor">@color/colorPink</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
 </resources>
